--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
 All colors MUST be HSL.
 */
 
+body {
+  @apply bg-background text-foreground;
+  font-family: "Funnel Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
